Backendwithsf/force-app/main/default/objects/DMart_Order_Item__c/DMart_Order_Item__c.object-meta.xml
<CustomObject>
    <label>DMart Order Item</label>
    <nameField>
        <label>DMart Order Item Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>DMart Order Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>