Backendwithsf/force-app/main/default/objects/DMart_Order_Item__c/fields/DMart_Order__c.field-meta.xml
<CustomField>
    <fullName>DMart_Order__c</fullName>
    <label>DMart Order</label>
    <referenceTo>DMart_Order__c</referenceTo>
    <relationshipLabel>DMart Order Items</relationshipLabel>
    <relationshipName>DMart_Order_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>