Backendwithsf/force-app/main/default/objects/DMart_Order_Item__c/fields/Order__c.field-meta.xml
<CustomField>
    <fullName>Order__c</fullName>
    <label>Order</label>
    <referenceTo>Order</referenceTo>
    <relationshipLabel>DMart Order Items</relationshipLabel>
    <relationshipName>DMart_Order_Items</relationshipName>
    <type>Lookup</type>
</CustomField>