Backendwithsf/force-app/main/default/objects/DMart_Order_Item__c/fields/Product_dmart__c.field-meta.xml
<CustomField>
    <fullName>Product_dmart__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product_dmart__c</referenceTo>
    <relationshipLabel>Order Items</relationshipLabel>
    <relationshipName>Order_Items</relationshipName>
    <type>Lookup</type>
</CustomField>